test/statements/manage/missingNewNoParen.good
missingNewNoParen.chpl:14: error: cannot use a type in a 'manage' statement
