test/statements/manage/missingNewNoParen.bad
missingNewNoParen.chpl:14: internal error: COD-CG--XPR-1674 chpl version 2.1.0 pre-release (aafdad217f)
Note: This source location is a guess.

Internal errors indicate a bug in the Chapel compiler,
and we're sorry for the hassle.  We would appreciate your reporting this bug --
please see https://chapel-lang.org/bugs.html for instructions.  In the meantime,
the filename + line number above may be useful in working around the issue.

